# mt-mediainfo

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  a.sql  dprint.json  main.py  pixi.toml  pyproject.toml  taskfile.yaml
.agents/skills/qb-torrent-lifecycle/: SKILL.md
.agents/skills/rpc-system/: SKILL.md
.agents/skills/rtorrent-rpc/: SKILL.md
.agents/skills/scrape-mteam/: SKILL.md
.agents/skills/server-dashboard/: SKILL.md
.agents/skills/thread-lifecycle/: SKILL.md
.agents/skills/torrent-lifecycle/: SKILL.md
.github/: mergify.yml  renovate.json
.github/skills/qb-torrent-lifecycle/: SKILL.md
.github/skills/rpc-system/: SKILL.md
.github/skills/rtorrent-rpc/: SKILL.md
.github/skills/scrape-mteam/: SKILL.md
.github/skills/server-dashboard/: SKILL.md
.github/skills/thread-lifecycle/: SKILL.md
.github/workflows/: build.yaml  lint.yaml  neptune-rtorrent.yaml  review.yaml
app/: _zstd.py  application.py  bt_client.py  config.py  const.py  db.py  download_client.py  downloader.py  file_cache.py  hardcode_subtitle.py  kv.py  main.py  mediainfo.py  migrate.py  mt.py  neptune_client.py  node.py  qb.py  qb_client.py  rpc.py  rt.py  rt_client.py  scrape.py  server.py  torrent.py  torrent_store.py  utils.py
app/bt_client/: __init__.py  _base.py  base.py  neptune_client.py  qb_client.py  rt_client.py
app/db/: __init__.py  database.py  kv.py
app/db/dlock/: __init__.py
app/sql/: schema.sql  views.sql
app/sql/local_sqlite_migrations/: 001_initial.sql
app/sql/migrations/: 001_initial_schema.sql  002_node_id_to_text.sql  003_node_alias.sql  004_torrent_invalid.sql  005_node_version.sql  006_scrape_status.sql  007_config_expires_at.sql  008_scrape_error_log.sql  009_job_download_size.sql  010_add_selected_files.sql  011_reset_selected_size.sql  012_api_mediainfo.sql  013_thread_pipeline_view.sql  014_removed_reason.sql  015_exported_at.sql  016_export_record.sql  017_cached_files.sql  018_scrape_status_category.sql  019_backfill_task.sql  020_thread_autovacuum.sql  021_cleanup_backfill_task.sql  022_selected_index.sql  023_job_error_message.sql  024_job_download_size_index.sql  025_debug_info.sql  026_removed_node.sql  027_debug_info_to_text.sql  028_thread_priority.sql  029_reset_file_cache_and_bdmv.sql  030_deprecate_debug_info.sql  031_node_status.sql  032_skip_downloading_bdmv.sql  033_add_job_last_progress_at.sql  034_api_mediainfo_at_index.sql  035_job_completed_at_index.sql  036_last_progress_at_not_null.sql  037_job_autovacuum.sql
app/sql/progress_migrations/: 001_initial.sql
app/templates/: _debug_dialog_body.html.j2  _debug_dialog_css.html.j2  admin.html.j2  detail.html.j2  errors.html.j2  exports.html.j2  index.html.j2  index_content.html.j2  layout.html.j2  node_jobs.html.j2  nodes.html.j2  progress.html.j2  rpc.html.j2  thread_detail.html.j2  threads.html.j2  threads_pending_download.html.j2  threads_with_reset.html.j2
scripts/: export_mediainfo.py  export_mediainfo_incremental.py
tests/: test_bdmv.py
