[project]
name = 'pt-repost'
version = '0'
requires-python = '~=3.12.12'
description = ''
dependencies = [
    'orjson==3.11.8',
    "uuid-utils==0.14.1",
    'rich==15.0.0',
    'xxhash==3.6.0',
    'qbittorrent-api==2025.11.1',
    'click==8.3.2',
    'pydantic==2.13.1',
    'httpx==0.28.1',
    'bencode2==0.3.30',
    'tomli==2.4.1',
    'yarl==1.23.0',
    'psycopg[binary,pool]==3.3.3',
    'durationpy==0.10',
    'fastapi==0.136.0',
    'uvicorn==0.44.0',
    'rapidocr-onnxruntime==1.4.4',
    'jinja2==3.1.6',
    'tzdata',
    "six==1.17.0",
    "tenacity==9.1.4",
    "sslog==0.0.0a52",
    "regex==2026.4.4",
    "asyncpg==0.31.0",
    # "polars==1.39.3",
    "opendal==0.46.0",
]

[dependency-groups]
dev = [
    "asyncpg-stubs==0.31.2",
    "mypy==1.20.1",
    "ty==0.0.31",
    "types-regex==2026.4.4.20260408",
    "types-six==1.17.0.20260408",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
cache_dir = '.venv/.cache/pytest'

[tool.mypy]
exclude = 'build,data,.kilo'
mypy_path = '$MYPY_CONFIG_FILE_DIR'
cache_dir = '$MYPY_CONFIG_FILE_DIR/.venv/.cache/pytest'
python_version = '3.12'
disable_error_code = ["no-any-return", "unused-ignore"]
strict = true
ignore_missing_imports = true
check_untyped_defs = true

[tool.pyright]
pythonVersion = '3.12'
venvPath = '.'
venv = '.venv'

[tool.ty.rules]
all = "error"

[tool.ruff]
cache-dir = '.venv/.cache/ruff'
line-length = 100
preview = true

[tool.ruff.format]

[tool.ruff.lint]
preview = true
extend-select = ['I', 'PLW1514']
ignore = ['BLE001', 'TRY002', 'PLW1510']
unfixable = ['F401']
