[project]
name = 'app'
version = '0'
requires-python = '~=3.14.0'
description = ''
dependencies = [
  'orjson==3.11.9',
  'rich==15.0.0',
  'xxhash==3.8.1',
  'click==8.4.2',
  'pydantic==2.13.4',
  'httpx==0.28.1',
  'bencode2==0.3.33',
  'yarl==1.24.2',
  'psycopg[binary,pool]==3.3.4',
  'durationpy==0.10',
  'fastapi==0.139.2',
  'uvicorn==0.51.0',
  'rapidocr-onnxruntime==1.4.4',
  'jinja2==3.1.6',
  'tzdata==2026.3',
  "pillow==12.3.0",
  "sslog==0.0.0a52",
  "regex==2026.7.19",
  "asyncpg==0.31.0",
  # "polars==1.39.3",
  "opendal==0.47.3",
  "zstandard==0.25.0",
  "pg-dlock==0.0.0a2",
  "botocore==1.43.54",
  "boto3==1.43.54",
  "mypy-boto3-s3==1.43.50",
  "neptune-sdk==0.0.1.dev838",
]

[dependency-groups]
dev = [
  "asyncpg-stubs==0.31.3",
  "mypy==2.3.0",
  "pytest==9.1.1",
  "ty==0.0.56",
  "types-regex==2026.7.19.20260720",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
cache_dir = '.venv/.cache/pytest'

[tool.mypy]
exclude = 'build,data,.kilo'
mypy_path = '$MYPY_CONFIG_FILE_DIR'
cache_dir = '$MYPY_CONFIG_FILE_DIR/.venv/.cache/pytest'
python_version = '3.14'
disable_error_code = ["no-any-return", "unused-ignore", "redundant-cast"]
strict = true
ignore_missing_imports = true
check_untyped_defs = true

[tool.pyright]
pythonVersion = '3.14'
venvPath = '.'
venv = '.venv'
reportUnnecessaryCast = true

[tool.ruff]
cache-dir = '.venv/.cache/ruff'
line-length = 100
preview = true

[tool.ruff.format]

[tool.ruff.lint]
preview = true
extend-select = ['I', 'PLW1514']
ignore = ['BLE001', 'TRY002', 'PLW1510', 'FLY002']
unfixable = ['F401']
